# mcp-servers

./: .env.sample  README.md  pyproject.toml
mcps/apihub_kma/: README.md  server.py
mcps/file_rwef/: README.md
mcps/naver_mail/: README.md  server.py
mcps/naver_news/: README.md  server.py
mcps/naver_trend/: Dockerfile  README.md  deploy-naver-trend.yaml  server.py  service-naver-trend.yaml
mcps/vision_mcp/: client.py
